--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -105,7 +105,7 @@
         "db = duckdb.connect('iowa.db')\n",
         "db.execute(\"CREATE TABLE iowa AS SELECT * FROM read_csv_auto('iowa.csv')\")\n",
         "\n",
-        "results = {}",
+        "results = {}\n",
         "\n",
         "def runq(q):\n",
         "  \"I'm helper function to run and print queries\"\n",
